--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.4.1",
+    "@eslint/config-array": "^0.18.0",
+    "@eslint/object-schema": "^2.1.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "glob": "^11.0.0",
+    "inflight": "^1.0.6",
     "lucide-react": "^0.439.0",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
@@ -21,6 +25,7 @@
     "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "rimraf": "^6.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
